array.island.Island.scala.error
Erreur de compilation :
Island:7: error: value += is not a member of Int
      b+=1
       ^